Adding a button in the file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis enim veritatis molestias maiores doloremque ab, nobis deserunt obcaecati culpa. Quos ipsam vitae maxime reprehenderit nam similique itaque architecto vel eum voluptate. Qui eaque deleniti laboriosam ipsam adipisci dolorem officia amet saepe nam hic, quas provident exercitationem fugit fuga soluta unde.</p>
 
+    <button style="background-color: red;">Click me </button>
 </body>
 </html>
